--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.5.3"
+    "@vuepress/plugin-toc": "^2.0.0-beta.7",
+    "vuepress": "^1.5.3",
+    "webpack": "^5.97.0",
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
     "vuepress-theme-book": "^0.0.9"
